<resources>
    <string name="app_name">TrackIt</string>
    <string name="title_activity_list">listActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="login_signIn">Sign in</string>
    <string name="login_enterYourPassword">Enter your password</string>
    <string name="login_enterYourLogin">Enter your login</string>
    <string name="register_signIn">Create account</string>
    <string name="register_enterYourLogin">Enter your login</string>
    <string name="register_enterYourPassword">Enter your password</string>
    <string name="register_confirmYourPassword">Confirm your password</string>
    <string name="trackit">TrackIt!</string>
    <string name="register_BackToMenu">Back to menu</string>
    <string name="login_BackToMenu">Back to menu</string>
    <string name="main_getLocation">Sprawdź połączenie</string>
    <string name="main_show_current_position">Wyświetl pozycję</string>
    <string name="title_activity_maps">Map</string>
    <string name="main_show_on_map">Pokaż na mapie</string>
    <string name="location_details_title">Aktualna pozycja:</string>
    <string name="location_details_time">Wybierz czas śledzenia pojazdu</string>
    <string name="location_details_1_min">1 min</string>
    <string name="location_details_10_min">10 min</string>
    <string name="location_details_30_min">30 min</string>
    <string name="location_details_60_min">60 min</string>
    <string name="appTitle">TrackIt!</string>
    <string name="main_status">Status lokalizatora</string>
    <string name="main_last_sms">Ostatni wysłany sms:</string>
    <string name="main_last_position">Ostatnia prawidłowa pozycja</string>
    <string name="main_sim_number">Numer SIM lokalizatora</string>
    <string name="main_gps_status">GPS status: BRAK POŁĄCZENIA</string>
    <string name="main_gsm_status">GSM status: BRAK POŁĄCZENIA</string>
    <string name="download_from_base">Pobierz dane z bazy</string>
</resources>
