<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:id="@+id/register_relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/register_tTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/trackit"
            android:textSize="50dp"
            android:textStyle="italic" />

        <RelativeLayout
            android:id="@+id/register_relativeLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_tTitle"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/register_etLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:hint="@string/register_enterYourLogin" />

            <EditText
                android:id="@+id/register_etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/register_etLogin"
                android:layout_centerHorizontal="true"
                android:hint="@string/register_enterYourPassword" />

            <EditText
                android:id="@+id/register_etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/register_etPassword"
                android:layout_centerHorizontal="true"
                android:hint="@string/register_confirmYourPassword" />

        </RelativeLayout>

        <Button
            android:id="@+id/register_bSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/register_relativeLayout2"
            android:text="@string/register_signIn"
            android:textSize="25dp"
            android:textStyle="italic"/>

        <Button
            android:id="@+id/register_bBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/register_bSignIn"
            android:text="@string/register_BackToMenu"
            android:textSize="10dp"
            android:textStyle="italic"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>